# rethinking

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  rethinking.example.toml
src/: agent.rs  config.rs  iteration.rs  lib.rs  main.rs  mcp_server.rs  memory.rs  script.rs  subprocess.rs  tools.rs  types.rs
tests/: integration.rs
